# website-builder

./: README.md  app.py  pyproject.toml
src/website_generator/: crew.py  main.py
src/website_generator/config/: agents.yaml  tasks.yaml
static/css/: tool-style.css
static/js/: tool-script.js  webflow-script.js
templates/: contact.html  index.html  privacy_policy.html  terms_of_use.html  tool.html
templates/website/: website.html
templates/website/css/: styles.css
templates/website/js/: script.js
